--- a/model_bbox/Classifier_rep.ipynb
+++ b/model_bbox/Classifier_rep.ipynb
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 53,
    "metadata": {
     "collapsed": false
    },
@@ -79,7 +79,7 @@
     "    return x_centered\n",
     "\n",
     "def mean(x):\n",
-    "    mean = np.mean(X_train_crop, axis=0)\n",
+    "    mean = np.mean(x, axis=0)\n",
     "    mean = np.mean(mean, axis=(0,1))\n",
     "    return mean\n",
     "\n",
@@ -733,7 +733,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 52,
    "metadata": {
     "collapsed": false
    },
@@ -769,7 +769,9 @@
     "    with open(\"../RFCN/ImageSets/Main/train_test.txt\",\"r\") as f:\n",
     "        train_file_labels = f.readlines()\n",
     "    assert len(detections_full_AGNOSTICnms) == len(test_files)\n",
-    "\n",
+    "    \n",
+    "    count = np.zeros(len(detections_full_AGNOSTICnms))\n",
+    "    \n",
     "    for im in range(len(detections_full_AGNOSTICnms)):\n",
     "        if im%1000 == 0: print(im)\n",
     "        basename = test_files[im][:9]\n",
@@ -786,8 +788,10 @@
     "        bboxes = []\n",
     "        detects_im = detections_full_AGNOSTICnms[im]\n",
     "        for i in range(len(detects_im)):\n",
-    "            if np.sum(detects_im[i,5:]) >= CONF_THRESH:\n",
+    "#             if np.sum(detects_im[i,5:]) >= CONF_THRESH:\n",
+    "            if np.max(detects_im[i,5:]) >= CONF_THRESH:\n",
     "                bboxes.append(detects_im[i,:]) \n",
+    "        count[im] = len(bboxes)\n",
     "        if len(bboxes) == 0:\n",
     "            ind = np.argmax(np.sum(detects_im[:,5:], axis=1))\n",
     "            bboxes.append(detects_im[ind,:])\n",
@@ -810,7 +814,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 54,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "test_mean = [0.41019869,  0.43978861,  0.39873621]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 57,
    "metadata": {
     "collapsed": false
    },
@@ -839,33 +854,31 @@
     "    print ('Generating file '+file_name)  \n",
     "#     nb_augmentation = 1\n",
     "#     if nb_augmentation ==1:\n",
-    "#         test_preds = test_model.predict_generator(test_generator(df=RFCNbbox_RFCNpred_df, mean=train_mean), \n",
+    "#         test_preds = test_model.predict_generator(test_generator(df=RFCNbbox_RFCNpred_df, mean=test_mean), \n",
     "#                                                   val_samples=RFCNbbox_RFCNpred_df.shape[0], nb_worker=1, pickle_safe=False)\n",
     "#     else:\n",
     "#         test_preds = np.zeros((RFCNbbox_RFCNpred_df.shape[0], len(FISH_CLASSES)), dtype=K.floatx())\n",
     "#         for idx in range(nb_augmentation):\n",
     "#             print('{}th augmentation for testing ...'.format(idx+1))\n",
-    "#             test_preds += test_model.predict_generator(test_generator(df=RFCNbbox_RFCNpred_df, mean=train_mean, datagen=test_aug_datagen), \n",
+    "#             test_preds += test_model.predict_generator(test_generator(df=RFCNbbox_RFCNpred_df, mean=test_mean, datagen=test_aug_datagen), \n",
     "#                                                        val_samples=RFCNbbox_RFCNpred_df.shape[0], nb_worker=1, pickle_safe=False)\n",
     "#         test_preds /= nb_augmentation\n",
     "\n",
     "    CROPpred_df = pd.DataFrame(test_preds, columns=['ALB_CROP', 'BET_CROP', 'DOL_CROP', 'LAG_CROP', 'NoF_CROP', 'OTHER_CROP', 'SHARK_CROP', 'YFT_CROP'])\n",
     "    RFCNbbox_RFCNpred_CROPpred_HYBRIDpred_df = pd.concat([RFCNbbox_RFCNpred_df,CROPpred_df], axis=1)\n",
     "    \n",
-    "    RFCNbbox_RFCNpred_CROPpred_HYBRIDpred_df['NoF'] = RFCNbbox_RFCNpred_CROPpred_HYBRIDpred_df['NoF_RFCN']\n",
-    "#     RFCNbbox_RFCNpred_CROPpred_HYBRIDpred_df['FISH'] = RFCNbbox_RFCNpred_CROPpred_HYBRIDpred_df.apply(lambda row: 1-row['NoF_RFCN'], axis=1)\n",
-    "    for fish in ['ALB', 'BET', 'DOL', 'LAG', 'OTHER', 'SHARK', 'YFT']:\n",
-    "        RFCNbbox_RFCNpred_CROPpred_HYBRIDpred_df[fish] = RFCNbbox_RFCNpred_CROPpred_HYBRIDpred_df.apply(lambda row: (1-row['NoF_RFCN'])*row[[fish+'_CROP']]/(1-row['NoF_CROP']) if row['NoF_CROP']!=1 else 0, axis=1)\n",
-    "#     RFCNbbox_RFCNpred_CROPpred_HYBRIDpred_df.drop('FISH', axis=1, inplace=True)\n",
-    "#     for fish in FISH_CLASSES:\n",
-    "#         RFCNbbox_RFCNpred_CROPpred_HYBRIDpred_df[fish] = RFCNbbox_RFCNpred_CROPpred_HYBRIDpred_df[fish+'_CROP']\n",
+    "#     RFCNbbox_RFCNpred_CROPpred_HYBRIDpred_df['NoF'] = RFCNbbox_RFCNpred_CROPpred_HYBRIDpred_df['NoF_RFCN']\n",
+    "#     for fish in ['ALB', 'BET', 'DOL', 'LAG', 'OTHER', 'SHARK', 'YFT']:\n",
+    "#         RFCNbbox_RFCNpred_CROPpred_HYBRIDpred_df[fish] = RFCNbbox_RFCNpred_CROPpred_HYBRIDpred_df.apply(lambda row: (1-row['NoF_RFCN'])*row[[fish+'_CROP']]/(1-row['NoF_CROP']) if row['NoF_CROP']!=1 else 0, axis=1)\n",
+    "    for fish in FISH_CLASSES:\n",
+    "        RFCNbbox_RFCNpred_CROPpred_HYBRIDpred_df[fish] = RFCNbbox_RFCNpred_CROPpred_HYBRIDpred_df[fish+'_CROP']\n",
     "\n",
     "    RFCNbbox_RFCNpred_CROPpred_HYBRIDpred_df.to_pickle(OUTPUT_DIR+file_name) "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 60,
    "metadata": {
     "collapsed": false
    },
@@ -982,7 +995,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 61,
    "metadata": {
     "collapsed": false
    },
@@ -993,22 +1006,22 @@
      "text": [
       "image_class\n",
       "--            NaN\n",
-      "ALB      0.043804\n",
-      "BET      0.236742\n",
-      "DOL      0.140754\n",
-      "LAG      0.000835\n",
-      "NoF      0.126442\n",
-      "OTHER    0.105386\n",
-      "SHARK    0.147953\n",
-      "YFT      0.083424\n",
+      "ALB      0.162973\n",
+      "BET      0.183628\n",
+      "DOL      0.133640\n",
+      "LAG      0.015996\n",
+      "NoF      0.370421\n",
+      "OTHER    0.102338\n",
+      "SHARK    0.135090\n",
+      "YFT      0.152516\n",
       "Name: logloss, dtype: float64\n",
-      "logloss of train is 0.08386314092922448\n"
+      "logloss of train is 0.17795884691494246\n"
      ]
     }
    ],
    "source": [
     "#temperature\n",
-    "T = 1\n",
+    "T = 2.5\n",
     "test_pred_array = test_pred_df[FISH_CLASSES].values\n",
     "test_pred_T_array = np.exp(np.log(test_pred_array)/T)\n",
     "test_pred_T_array = test_pred_T_array/np.sum(test_pred_T_array, axis=1, keepdims=True)\n",
@@ -1026,7 +1039,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 62,
    "metadata": {
     "collapsed": false
    },
@@ -1035,7 +1048,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Done!RFCN_AGONOSTICnms_resnet101_rfcn_ohem_iter_30000_resnet50_FT38_Classifier_Rep_clsMaxAve_conf0.80_T1_0.0839.csv\n"
+      "Done!RFCN_AGONOSTICnms_resnet101_rfcn_ohem_iter_30000_resnet50_FT38_Classifier_Rep_clsMaxAve_conf0.80_T2.5_0.1780.csv\n"
      ]
     }
    ],
