--- a/model_bbox/Classifier_rep.ipynb
+++ b/model_bbox/Classifier_rep.ipynb
@@ -1063,6 +1063,159 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 83,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Loading data done.\n",
+      "Convert to float32 done.\n",
+      "Rescale by 255 done.\n"
+     ]
+    }
+   ],
+   "source": [
+    "with open('../data/data_test_BBCrop_{}_{}.pickle'.format(ROWS, COLS), 'rb') as f:\n",
+    "    data_test = pickle.load(f)\n",
+    "X_test_crop = data_test['X_test_crop']\n",
+    "test_crop_files = data_test['test_crop_files']\n",
+    "\n",
+    "print('Loading data done.')\n",
+    "X_test_crop = X_test_crop.astype(np.float32)\n",
+    "print('Convert to float32 done.')\n",
+    "X_test_crop /= 255.\n",
+    "print('Rescale by 255 done.')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 84,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "6037/6037 [==============================] - 57s    \n"
+     ]
+    }
+   ],
+   "source": [
+    "X_test_crop_centered = featurewise_center(X_test_crop)\n",
+    "test_crop_preds = test_model.predict(X_test_crop_centered, batch_size=BATCHSIZE, verbose=1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 88,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0\n",
+      "1000\n",
+      "2000\n",
+      "3000\n",
+      "4000\n"
+     ]
+    }
+   ],
+   "source": [
+    "with open(\"../RFCN/ImageSets/Main/test.txt\",\"r\") as f:\n",
+    "    ims = f.readlines()\n",
+    "test_files = [im[:-1]+'.jpg' for im in ims]\n",
+    "\n",
+    "count = np.zeros(len(test_files))\n",
+    "\n",
+    "test_preds = np.ndarray((len(test_files), test_crop_preds.shape[1]), dtype=np.float32)\n",
+    "for j in range(len(test_files)):\n",
+    "    if j%1000 == 0:\n",
+    "        print(j)\n",
+    "    file = test_files[j]\n",
+    "    test_preds_im = []\n",
+    "    for i in range(len(test_crop_files)):\n",
+    "        if test_crop_files[i][:9] == file[:9]:\n",
+    "            test_preds_im.append(test_crop_preds[i])\n",
+    "    test_preds_im = np.asarray(test_preds_im)\n",
+    "    score_max = np.max(test_preds_im, axis=1)\n",
+    "    inds = np.argmax(test_preds_im, axis=1)\n",
+    "    labels = [FISH_CLASSES[ind] for ind in inds]\n",
+    "    columns = FISH_CLASSES[:]\n",
+    "    test_preds_im_df = pd.DataFrame(test_preds_im, columns=columns)\n",
+    "    test_preds_im_df['max_cls'] = labels\n",
+    "    test_preds_im_df['max_score'] = score_max \n",
+    "    test_preds_im_df['Counts'] = test_preds_im_df.groupby(['max_cls'])['max_cls'].transform('count')\n",
+    "    idx = test_preds_im_df.groupby(['max_cls'])['max_score'].transform(max) == test_preds_im_df['max_score']\n",
+    "    test_preds_im_df = test_preds_im_df[idx]\n",
+    "    count[j] = test_preds_im_df.shape[0]\n",
+    "    l = FISH_CLASSES.copy()\n",
+    "    l.append('Counts')\n",
+    "    test_preds_im_array = test_preds_im_df[l].as_matrix() \n",
+    "    test_preds[j] = np.average(test_preds_im_array[:,:-1], axis=0, weights=test_preds_im_array[:,-1], returned=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 89,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "#temperature\n",
+    "T = 2.5\n",
+    "test_preds_T = np.exp(np.log(test_preds)/T)\n",
+    "test_preds_T = test_preds_T/np.sum(test_preds_T, axis=1, keepdims=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 90,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "logloss of train is 0.17928934953947684\n"
+     ]
+    }
+   ],
+   "source": [
+    "#calculate train logloss\n",
+    "FISH_CLASSES_2 = ['ALB', 'BET', 'DOL', 'LAG', 'NoF', 'OTHER', 'SHARK', 'YFT']\n",
+    "\n",
+    "train_files = test_files[1000:]\n",
+    "train_preds = test_preds_T[1000:,:]\n",
+    "with open(\"../RFCN/ImageSets/Main/train_test.txt\",\"r\") as f:\n",
+    "    train_file_labels = f.readlines()\n",
+    "\n",
+    "log_losses = []\n",
+    "for i in range(len(train_preds)):\n",
+    "    im = train_files[i][:-4]\n",
+    "    for im_label in train_file_labels:\n",
+    "        if im_label[:9] == im:\n",
+    "            label = im_label[10:-1]\n",
+    "            index = FISH_CLASSES_2.index(label)\n",
+    "            log_losses.append(-math.log(train_preds[i,index]))\n",
+    "log_loss = sum(log_losses) / float(len(log_losses))\n",
+    "print('logloss of train is', log_loss )"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {
     "collapsed": true
