--- a/model_bbox/Classifier_rep.ipynb
+++ b/model_bbox/Classifier_rep.ipynb
@@ -1093,7 +1093,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "test_model = load_model('./resnet50_FT38_CW_STGTrain/checkpoint/weights.014-0.0369.hdf5')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
@@ -1102,7 +1113,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "6037/6037 [==============================] - 57s    \n"
+      "5120/6037 [========================>.....] - ETA: 9s "
      ]
     }
    ],
@@ -1113,23 +1124,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "0\n",
-      "1000\n",
-      "2000\n",
-      "3000\n",
-      "4000\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "with open(\"../RFCN/ImageSets/Main/test.txt\",\"r\") as f:\n",
     "    ims = f.readlines()\n",
@@ -1166,7 +1165,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": null,
    "metadata": {
     "collapsed": true
    },
@@ -1180,19 +1179,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "logloss of train is 0.17928934953947684\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "#calculate train logloss\n",
     "FISH_CLASSES_2 = ['ALB', 'BET', 'DOL', 'LAG', 'NoF', 'OTHER', 'SHARK', 'YFT']\n",
@@ -1202,16 +1193,81 @@
     "with open(\"../RFCN/ImageSets/Main/train_test.txt\",\"r\") as f:\n",
     "    train_file_labels = f.readlines()\n",
     "\n",
-    "log_losses = []\n",
+    "logloss_df = pd.DataFrame(columns=['image_class','logloss'])\n",
     "for i in range(len(train_preds)):\n",
     "    im = train_files[i][:-4]\n",
     "    for im_label in train_file_labels:\n",
     "        if im_label[:9] == im:\n",
     "            label = im_label[10:-1]\n",
     "            index = FISH_CLASSES_2.index(label)\n",
-    "            log_losses.append(-math.log(train_preds[i,index]))\n",
-    "log_loss = sum(log_losses) / float(len(log_losses))\n",
-    "print('logloss of train is', log_loss )"
+    "            logloss_df.loc[len(logloss_df)]=[label,-math.log(train_preds[i,index])]\n",
+    "#             log_losses.append(-math.log(train_preds[i,index]))\n",
+    "\n",
+    "print(logloss_df.groupby(['image_class'])['logloss'].mean())\n",
+    "train_logloss = logloss_df['logloss'].mean()\n",
+    "print('logloss of train is', train_logloss )"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "image_class\n",
+    "ALB      0.226492\n",
+    "BET      0.303777\n",
+    "DOL      0.254882\n",
+    "LAG      0.033155\n",
+    "NoF      0.447992\n",
+    "OTHER    0.163935\n",
+    "SHARK    0.131572\n",
+    "YFT      0.227942\n",
+    "Name: logloss, dtype: float64\n",
+    "logloss of train is 0.24621065547851018\n",
+    "image_class\n",
+    "ALB      0.207327\n",
+    "BET      0.189047\n",
+    "DOL      0.111698\n",
+    "LAG      0.019987\n",
+    "NoF      0.426936\n",
+    "OTHER    0.080606\n",
+    "SHARK    0.122777\n",
+    "YFT      0.118584\n",
+    "Name: logloss, dtype: float64\n",
+    "logloss of train is 0.1958932319599284\n",
+    "image_class\n",
+    "--            NaN\n",
+    "ALB      0.162973\n",
+    "BET      0.183628\n",
+    "DOL      0.133640\n",
+    "LAG      0.015996\n",
+    "NoF      0.370421\n",
+    "OTHER    0.102338\n",
+    "SHARK    0.135090\n",
+    "YFT      0.152516\n",
+    "Name: logloss, dtype: float64\n",
+    "logloss of train is 0.17795884691494246"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 91,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "#test submission\n",
+    "FISH_CLASSES = ['ALB', 'BET', 'DOL', 'LAG', 'NoF', 'OTHER', 'SHARK', 'YFT']\n",
+    "submission = pd.DataFrame(test_preds_T[:1000,:], columns=FISH_CLASSES)\n",
+    "submission.insert(0, 'image', test_files[:1000])\n",
+    "\n",
+    "info = 'RFCN_AGONOSTICnms_'+RFCN_MODEL+'_BBCROP_resnet50_clsMaxAve_conf{:.2f}_T{}_'.format(CONF_THRESH, T) + '{:.4f}'.format(log_loss)\n",
+    "sub_file = 'submission_' + info + '.csv'\n",
+    "submission.to_csv(sub_file, index=False)"
    ]
   },
   {
