--- a/model_bbox/Classifier_rep.ipynb
+++ b/model_bbox/Classifier_rep.ipynb
@@ -1093,7 +1093,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 104,
    "metadata": {
     "collapsed": true
    },
@@ -1104,7 +1104,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 105,
    "metadata": {
     "collapsed": false
    },
@@ -1113,7 +1113,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "5120/6037 [========================>.....] - ETA: 9s "
+      "6037/6037 [==============================] - 63s    \n"
      ]
     }
    ],
@@ -1124,11 +1124,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 106,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0\n",
+      "1000\n",
+      "2000\n",
+      "3000\n",
+      "4000\n"
+     ]
+    }
+   ],
    "source": [
     "with open(\"../RFCN/ImageSets/Main/test.txt\",\"r\") as f:\n",
     "    ims = f.readlines()\n",
@@ -1165,7 +1177,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 107,
    "metadata": {
     "collapsed": true
    },
@@ -1179,11 +1191,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 108,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "image_class\n",
+      "ALB      0.207327\n",
+      "BET      0.189047\n",
+      "DOL      0.111698\n",
+      "LAG      0.019987\n",
+      "NoF      0.426936\n",
+      "OTHER    0.080606\n",
+      "SHARK    0.122777\n",
+      "YFT      0.118584\n",
+      "Name: logloss, dtype: float64\n",
+      "logloss of train is 0.1958932319599284\n"
+     ]
+    }
+   ],
    "source": [
     "#calculate train logloss\n",
     "FISH_CLASSES_2 = ['ALB', 'BET', 'DOL', 'LAG', 'NoF', 'OTHER', 'SHARK', 'YFT']\n",
@@ -1254,7 +1284,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 109,
    "metadata": {
     "collapsed": true
    },
