--- a/model_bbox/Classifier_rep.ipynb
+++ b/model_bbox/Classifier_rep.ipynb
@@ -1093,18 +1093,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 104,
+   "execution_count": 111,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
-    "test_model = load_model('./resnet50_FT38_CW_STGTrain/checkpoint/weights.014-0.0369.hdf5')"
+    "test_model = load_model('./resnet50_FT38_CW_STGTrain/checkpoint/weights.029-0.0654.hdf5')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 105,
+   "execution_count": 112,
    "metadata": {
     "collapsed": false
    },
@@ -1124,7 +1124,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 106,
+   "execution_count": 113,
    "metadata": {
     "collapsed": false
    },
@@ -1177,7 +1177,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 107,
+   "execution_count": 114,
    "metadata": {
     "collapsed": true
    },
@@ -1191,7 +1191,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 108,
+   "execution_count": 115,
    "metadata": {
     "collapsed": false
    },
@@ -1201,16 +1201,16 @@
      "output_type": "stream",
      "text": [
       "image_class\n",
-      "ALB      0.207327\n",
-      "BET      0.189047\n",
-      "DOL      0.111698\n",
-      "LAG      0.019987\n",
-      "NoF      0.426936\n",
-      "OTHER    0.080606\n",
-      "SHARK    0.122777\n",
-      "YFT      0.118584\n",
+      "ALB      0.226492\n",
+      "BET      0.303777\n",
+      "DOL      0.254882\n",
+      "LAG      0.033155\n",
+      "NoF      0.447992\n",
+      "OTHER    0.163935\n",
+      "SHARK    0.131572\n",
+      "YFT      0.227942\n",
       "Name: logloss, dtype: float64\n",
-      "logloss of train is 0.1958932319599284\n"
+      "logloss of train is 0.24621065516753468\n"
      ]
     }
    ],
@@ -1231,7 +1231,6 @@
     "            label = im_label[10:-1]\n",
     "            index = FISH_CLASSES_2.index(label)\n",
     "            logloss_df.loc[len(logloss_df)]=[label,-math.log(train_preds[i,index])]\n",
-    "#             log_losses.append(-math.log(train_preds[i,index]))\n",
     "\n",
     "print(logloss_df.groupby(['image_class'])['logloss'].mean())\n",
     "train_logloss = logloss_df['logloss'].mean()\n",
@@ -1284,7 +1283,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 109,
+   "execution_count": 116,
    "metadata": {
     "collapsed": true
    },
@@ -1295,7 +1294,7 @@
     "submission = pd.DataFrame(test_preds_T[:1000,:], columns=FISH_CLASSES)\n",
     "submission.insert(0, 'image', test_files[:1000])\n",
     "\n",
-    "info = 'RFCN_AGONOSTICnms_'+RFCN_MODEL+'_BBCROP_resnet50_clsMaxAve_conf{:.2f}_T{}_'.format(CONF_THRESH, T) + '{:.4f}'.format(log_loss)\n",
+    "info = 'RFCN_AGONOSTICnms_'+RFCN_MODEL+'_BBCROP_resnet50_clsMaxAve_conf{:.2f}_T{}_'.format(CONF_THRESH, T) + '{:.4f}'.format(train_logloss)\n",
     "sub_file = 'submission_' + info + '.csv'\n",
     "submission.to_csv(sub_file, index=False)"
    ]
