--- a/model_bbox/Hybrid_woNoF.ipynb
+++ b/model_bbox/Hybrid_woNoF.ipynb
@@ -2,19 +2,11 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 10,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Using TensorFlow backend.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import os, random, glob, pickle, collections, math\n",
     "import numpy as np\n",
@@ -30,7 +22,7 @@
     "\n",
     "from keras.models import Sequential, Model, load_model, model_from_json\n",
     "from keras.layers import GlobalAveragePooling2D, Flatten, Dropout, Dense, LeakyReLU\n",
-    "from keras.optimizers import Adam\n",
+    "from keras.optimizers import Adam, RMSprop\n",
     "from keras.callbacks import EarlyStopping, ModelCheckpoint, ReduceLROnPlateau, TensorBoard\n",
     "from keras.preprocessing.image import ImageDataGenerator\n",
     "from keras.utils import np_utils\n",
@@ -118,7 +110,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false
    },
@@ -171,7 +163,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false
    },
@@ -181,7 +173,7 @@
      "output_type": "stream",
      "text": [
       "Loading from file data_train_224_224.pickle\n",
-      "Generating file data_valid_224_224.pickle\n",
+      "Loading from file data_valid_224_224.pickle\n",
       "Loading data done.\n",
       "Convert to float32 done.\n",
       "Rescale by 255 done.\n"
@@ -243,7 +235,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 5,
    "metadata": {
     "collapsed": false
    },
@@ -260,7 +252,7 @@
        " 6: 3.1451814768460578}"
       ]
      },
-     "execution_count": 62,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -284,7 +276,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 6,
    "metadata": {
     "collapsed": false
    },
@@ -311,7 +303,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 7,
    "metadata": {
     "collapsed": true
    },
@@ -352,7 +344,7 @@
     "# x = Dense(256, init='glorot_normal', activation='relu')(x)\n",
     "# x = Dense(256, init='glorot_normal')(x)\n",
     "# x = LeakyReLU(alpha=0.33)(x)\n",
-    "# x = Dropout(0.5)(x)\n",
+    "x = Dropout(0.8)(x)\n",
     "predictions = Dense(len(CROP_CLASSES), init='glorot_normal', activation='softmax')(x)\n",
     "\n",
     "model = Model(input=base_model.input, output=predictions)\n",
@@ -367,7 +359,7 @@
     "\n",
     "# train the model on the new data for a few epochs\n",
     "model.fit_generator(train_generator, samples_per_epoch=len(X_train), nb_epoch=30, verbose=1, \n",
-    "                    callbacks=[early_stopping, model_checkpoint, learningrate_schedule, tensorboard], \n",
+    "                    callbacks=[model_checkpoint, tensorboard], \n",
     "                    validation_data=valid_generator, nb_val_samples=len(X_valid), class_weight=class_weight, nb_worker=3, pickle_safe=True)"
    ]
   },
