--- a/model_bbox/Hybrid_woNoF.ipynb
+++ b/model_bbox/Hybrid_woNoF.ipynb
@@ -324,6 +324,45 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "#VGG16\n",
+    "#top layer training\n",
+    "\n",
+    "from keras.applications.vgg16 import VGG16\n",
+    "\n",
+    "base_model = VGG16(weights='imagenet', include_top=False)\n",
+    "x = base_model.output\n",
+    "x = GlobalAveragePooling2D()(x)\n",
+    "# x = Dense(256, init='glorot_normal', activation='relu')(x)\n",
+    "# x = Dropout(0.5)(x)\n",
+    "# x = Dense(256, init='glorot_normal', activation='relu')(x)\n",
+    "# x = Dropout(0.5)(x)\n",
+    "predictions = Dense(len(CROP_CLASSES), init='glorot_normal', activation='softmax')(x)\n",
+    "\n",
+    "# this is the model we will train\n",
+    "model = Model(input=base_model.input, output=predictions)\n",
+    "\n",
+    "# first: train only the top layers (which were randomly initialized)\n",
+    "for layer in base_model.layers:\n",
+    "    layer.trainable = False\n",
+    "\n",
+    "# compile the model (should be done *after* setting layers to non-trainable)\n",
+    "optimizer = Adam(lr=LearningRate)\n",
+    "model.compile(optimizer=optimizer, loss='categorical_crossentropy', metrics=['accuracy'])\n",
+    "\n",
+    "# train the model on the new data for a few epochs\n",
+    "model.fit_generator(train_generator, samples_per_epoch=len(X_train), nb_epoch=30, verbose=1, \n",
+    "                    callbacks=[early_stopping, model_checkpoint, learningrate_schedule, tensorboard], \n",
+    "                    validation_data=valid_generator, nb_val_samples=len(X_valid), class_weight=class_weight, nb_worker=3, pickle_safe=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
     "collapsed": false,
     "scrolled": true
    },
