--- a/model_bbox/Hybrid_woNoF.ipynb
+++ b/model_bbox/Hybrid_woNoF.ipynb
@@ -2,11 +2,19 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 1,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Using TensorFlow backend.\n"
+     ]
+    }
+   ],
    "source": [
     "import os, random, glob, pickle, collections, math\n",
     "import numpy as np\n",
@@ -324,9 +332,103 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch 1/30\n",
+      "3456/3496 [============================>.] - ETA: 0s - loss: 8.0281 - acc: 0.1036"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/opt/anaconda3/lib/python3.5/site-packages/keras/engine/training.py:1470: UserWarning: Epoch comprised more than `samples_per_epoch` samples, which might affect learning results. Set `samples_per_epoch` correctly to avoid this warning.\n",
+      "  warnings.warn('Epoch comprised more than '\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch 00000: val_loss improved from 1.98391 to 1.79781, saving model to ./resnet50_FT38_Hybrid_woNoF/checkpoint/weights.000-1.7978.hdf5\n",
+      "3584/3496 [==============================] - 111s - loss: 7.9758 - acc: 0.1152 - val_loss: 1.7978 - val_acc: 0.4386\n",
+      "Epoch 2/30\n",
+      "3456/3496 [============================>.] - ETA: 0s - loss: 7.1213 - acc: 0.3617Epoch 00001: val_loss did not improve\n",
+      "3584/3496 [==============================] - 81s - loss: 7.1623 - acc: 0.3577 - val_loss: 1.8602 - val_acc: 0.2054\n",
+      "Epoch 3/30\n",
+      "3448/3496 [============================>.] - ETA: 0s - loss: 7.6527 - acc: 0.1740Epoch 00002: val_loss did not improve\n",
+      "3576/3496 [==============================] - 86s - loss: 7.6215 - acc: 0.1728 - val_loss: 1.9304 - val_acc: 0.1183\n",
+      "Epoch 4/30\n",
+      "3456/3496 [============================>.] - ETA: 0s - loss: 7.2503 - acc: 0.2257Epoch 00003: val_loss did not improve\n",
+      "3584/3496 [==============================] - 80s - loss: 7.2647 - acc: 0.2232 - val_loss: 1.8892 - val_acc: 0.1618\n",
+      "Epoch 5/30\n",
+      "3456/3496 [============================>.] - ETA: 0s - loss: 6.6530 - acc: 0.2824Epoch 00004: val_loss improved from 1.79781 to 1.71845, saving model to ./resnet50_FT38_Hybrid_woNoF/checkpoint/weights.004-1.7184.hdf5\n",
+      "3584/3496 [==============================] - 80s - loss: 6.6483 - acc: 0.2857 - val_loss: 1.7184 - val_acc: 0.3672\n",
+      "Epoch 6/30\n",
+      "3448/3496 [============================>.] - ETA: 0s - loss: 6.5903 - acc: 0.2561Epoch 00005: val_loss did not improve\n",
+      "3576/3496 [==============================] - 81s - loss: 6.6178 - acc: 0.2534 - val_loss: 1.7822 - val_acc: 0.2065\n",
+      "Epoch 7/30\n",
+      "3456/3496 [============================>.] - ETA: 0s - loss: 6.5683 - acc: 0.2595Epoch 00006: val_loss did not improve\n",
+      "3584/3496 [==============================] - 80s - loss: 6.5074 - acc: 0.2609 - val_loss: 1.7194 - val_acc: 0.2801\n",
+      "Epoch 8/30\n",
+      "3456/3496 [============================>.] - ETA: 0s - loss: 6.5406 - acc: 0.2552Epoch 00007: val_loss improved from 1.71845 to 1.67127, saving model to ./resnet50_FT38_Hybrid_woNoF/checkpoint/weights.007-1.6713.hdf5\n",
+      "3584/3496 [==============================] - 81s - loss: 6.5365 - acc: 0.2581 - val_loss: 1.6713 - val_acc: 0.3259\n",
+      "Epoch 9/30\n",
+      "3456/3496 [============================>.] - ETA: 0s - loss: 6.1878 - acc: 0.3304Epoch 00009: val_loss did not improve\n",
+      "3584/3496 [==============================] - 80s - loss: 6.1845 - acc: 0.3287 - val_loss: 1.6224 - val_acc: 0.3940\n",
+      "Epoch 11/30\n",
+      "3456/3496 [============================>.] - ETA: 0s - loss: 6.1540 - acc: 0.2902Epoch 00010: val_loss did not improve\n",
+      "3584/3496 [==============================] - 80s - loss: 6.1459 - acc: 0.2888 - val_loss: 1.6110 - val_acc: 0.3772\n",
+      "Epoch 12/30\n",
+      "3448/3496 [============================>.] - ETA: 0s - loss: 6.0397 - acc: 0.3173Epoch 00011: val_loss did not improve\n",
+      "3576/3496 [==============================] - 80s - loss: 5.9822 - acc: 0.3191 - val_loss: 1.6248 - val_acc: 0.3002\n",
+      "Epoch 13/30\n",
+      "3456/3496 [============================>.] - ETA: 0s - loss: 5.8782 - acc: 0.3264Epoch 00012: val_loss did not improve\n",
+      "3584/3496 [==============================] - 80s - loss: 5.8797 - acc: 0.3276 - val_loss: 1.6139 - val_acc: 0.3862\n",
+      "Epoch 14/30\n",
+      "3456/3496 [============================>.] - ETA: 0s - loss: 6.1259 - acc: 0.3035Epoch 00013: val_loss did not improve\n",
+      "3584/3496 [==============================] - 80s - loss: 6.0864 - acc: 0.3022 - val_loss: 1.5886 - val_acc: 0.3683\n",
+      "Epoch 15/30\n",
+      "3448/3496 [============================>.] - ETA: 0s - loss: 5.7814 - acc: 0.3509Epoch 00014: val_loss did not improve\n",
+      "\n",
+      "Epoch 00014: reducing learning rate to 0.00010000000474974513.\n",
+      "3576/3496 [==============================] - 80s - loss: 5.8022 - acc: 0.3476 - val_loss: 1.6558 - val_acc: 0.2879\n",
+      "Epoch 16/30\n",
+      "3456/3496 [============================>.] - ETA: 0s - loss: 5.6089 - acc: 0.3015Epoch 00015: val_loss did not improve\n",
+      "3584/3496 [==============================] - 81s - loss: 5.6125 - acc: 0.3030 - val_loss: 1.6146 - val_acc: 0.3527\n",
+      "Epoch 17/30\n",
+      "3456/3496 [============================>.] - ETA: 0s - loss: 5.7936 - acc: 0.3440Epoch 00016: val_loss did not improve\n",
+      "3584/3496 [==============================] - 81s - loss: 5.7981 - acc: 0.3443 - val_loss: 1.5898 - val_acc: 0.3705\n",
+      "Epoch 18/30\n",
+      "3448/3496 [============================>.] - ETA: 0s - loss: 5.7589 - acc: 0.3269Epoch 00017: val_loss did not improve\n",
+      "3576/3496 [==============================] - 80s - loss: 5.7616 - acc: 0.3247 - val_loss: 1.5831 - val_acc: 0.3516\n",
+      "Epoch 19/30\n",
+      "3456/3496 [============================>.] - ETA: 0s - loss: 5.6774 - acc: 0.3411Epoch 00018: val_loss did not improve\n",
+      "3584/3496 [==============================] - 81s - loss: 5.7082 - acc: 0.3410 - val_loss: 1.6064 - val_acc: 0.3549\n",
+      "Epoch 20/30\n",
+      "3456/3496 [============================>.] - ETA: 0s - loss: 5.6359 - acc: 0.3385Epoch 00019: val_loss did not improve\n",
+      "\n",
+      "Epoch 00019: reducing learning rate to 1.0000000474974514e-05.\n",
+      "3584/3496 [==============================] - 81s - loss: 5.6784 - acc: 0.3407 - val_loss: 1.5699 - val_acc: 0.3728\n",
+      "Epoch 00019: early stopping\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "<keras.callbacks.History at 0x7f66c3c9e710>"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "#VGG16\n",
     "#top layer training\n",
@@ -336,6 +438,7 @@
     "base_model = VGG16(weights='imagenet', include_top=False)\n",
     "x = base_model.output\n",
     "x = GlobalAveragePooling2D()(x)\n",
+    "# x = Flatten()(x)\n",
     "# x = Dense(256, init='glorot_normal', activation='relu')(x)\n",
     "# x = Dropout(0.5)(x)\n",
     "# x = Dense(256, init='glorot_normal', activation='relu')(x)\n",
@@ -350,7 +453,7 @@
     "    layer.trainable = False\n",
     "\n",
     "# compile the model (should be done *after* setting layers to non-trainable)\n",
-    "optimizer = Adam(lr=LearningRate)\n",
+    "optimizer = Adam(lr=1e-3)\n",
     "model.compile(optimizer=optimizer, loss='categorical_crossentropy', metrics=['accuracy'])\n",
     "\n",
     "# train the model on the new data for a few epochs\n",
@@ -363,10 +466,48 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Loading model from checkpoint file ./resnet50_FT38_Hybrid_woNoF/checkpoint/weights.008-1.5471.hdf5\n",
+      "Loading model Done!\n",
+      "Epoch 1/300\n"
+     ]
+    }
+   ],
+   "source": [
+    "# VGG16\n",
+    "# fine tuning\n",
+    "start_layer = 1\n",
+    "\n",
+    "model, model_name = get_best_model()\n",
+    "# print('Loading model from weights.004-0.0565.hdf5')\n",
+    "# model = load_model('./checkpoints/checkpoint3/weights.004-0.0565.hdf5')\n",
+    "\n",
+    "for layer in model.layers[:start_layer]:\n",
+    "   layer.trainable = False\n",
+    "for layer in model.layers[start_layer:]:\n",
+    "   layer.trainable = True\n",
+    "\n",
+    "# we need to recompile the model for these modifications to take effect\n",
+    "optimizer = Adam(lr=1e-2)\n",
+    "model.compile(optimizer=optimizer, loss='categorical_crossentropy', metrics=['accuracy'])\n",
+    "\n",
+    "model.fit_generator(train_generator, samples_per_epoch=len(X_train), nb_epoch=300, verbose=1, \n",
+    "                    callbacks=[early_stopping, model_checkpoint, learningrate_schedule, tensorboard], \n",
+    "                    validation_data=valid_generator, nb_val_samples=len(X_valid), class_weight=class_weight, nb_worker=3, pickle_safe=True)"
+   ]
+  },
+  {
+   "cell_type": "raw",
+   "metadata": {
     "collapsed": false,
     "scrolled": true
    },
-   "outputs": [],
    "source": [
     "#Resnet50\n",
     "#top layer training\n",
@@ -403,13 +544,11 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "raw",
    "metadata": {
     "collapsed": false,
     "scrolled": false
    },
-   "outputs": [],
    "source": [
     "# Resnet50\n",
     "# fine tuning\n",
